completed everything as extension

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <p class="joke">
-            I don’t know, but the flag is a big plus.
+            Loading...
         </p>
     </div>
 
